<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="@dimen/vertical_margin"
    tools:context=".collection.NetworkConfigActivity"
    tools:theme="@style/Theme.AppCompat.DayNight.Dialog">

  <com.google.android.material.textview.MaterialTextView
      android:id="@+id/textTitle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:gravity="center"
      android:padding="@dimen/horizontal_margin"
      android:text="@string/edit_connection"
      android:textAppearance="@style/TextAppearance.AppCompat.Title" />

  <ScrollView
      android:id="@+id/scrollInputs"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/textTitle"
      android:layout_alignParentBottom="true"
      android:paddingHorizontal="@dimen/horizontal_margin"
      android:paddingBottom="64dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/layout_connection_name"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentTop="true"
          android:hint="@string/connection_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_connection_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/layout_primary_url"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@id/layout_connection_name"
          android:layout_marginTop="8dp"
          android:hint="@string/primary_url">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_primary_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri" />

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/layout_secondary_url"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@id/layout_primary_url"
          android:layout_marginTop="8dp"
          android:hint="@string/alternate_url">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_secondary_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri" />

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/layout_username"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@id/layout_secondary_url"
          android:layout_marginTop="8dp"
          android:hint="@string/username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/layout_password"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@id/layout_username"
          android:layout_marginTop="8dp"
          android:hint="@string/password"
          app:endIconMode="none">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.button.MaterialButton
          android:id="@+id/button_save"
          style="@style/Widget.Material3.Button.OutlinedButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@id/layout_password"
          android:layout_alignParentEnd="true"
          android:layout_marginTop="@dimen/vertical_margin"
          android:text="@string/save" />

      <com.google.android.material.button.MaterialButton
          android:id="@+id/button_test"
          style="@style/Widget.Material3.Button.OutlinedButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_below="@id/layout_password"
          android:layout_alignParentStart="true"
          android:layout_marginTop="@dimen/vertical_margin"
          android:layout_marginEnd="@dimen/horizontal_margin"
          android:layout_toStartOf="@id/button_save"
          android:text="@string/test_connection" />
    </RelativeLayout>
  </ScrollView>
</RelativeLayout>
