<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="@dimen/vertical_margin"
    tools:context=".collection.NetworkConfigActivity"
    tools:theme="@style/Theme.FileBrowser">

  <com.google.android.material.textview.MaterialTextView
      android:id="@+id/textTitle"
      android:layout_width="match_parent"
      android:layout_height="?actionBarSize"
      android:gravity="center"
      android:padding="@dimen/horizontal_margin"
      android:text="@string/edit_connection"
      android:textAppearance="@style/TextAppearance.AppCompat.Title"
      app:layout_constraintTop_toTopOf="parent" />

  <com.google.android.material.button.MaterialButton
      android:id="@+id/button_save"
      style="@style/Widget.Material3.Button.OutlinedButton"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="@dimen/horizontal_margin"
      android:text="@string/save"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@id/button_test" />

  <com.google.android.material.button.MaterialButton
      android:id="@+id/button_test"
      style="@style/Widget.Material3.Button.OutlinedButton"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="@dimen/horizontal_margin"
      android:text="@string/test_connection"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@id/button_save"
      app:layout_constraintStart_toStartOf="parent" />

  <ScrollView
      android:id="@+id/scrollInputs"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/textTitle"
      android:layout_alignParentBottom="true"
      android:paddingHorizontal="@dimen/horizontal_margin"
      android:paddingBottom="64dp"
      app:layout_constraintTop_toBottomOf="@id/textTitle">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/layout_connection_name"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentTop="true"
          android:hint="@string/connection_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_connection_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/layout_primary_url"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@id/layout_connection_name"
          android:layout_marginTop="8dp"
          android:hint="@string/primary_url">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_primary_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri" />

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/layout_secondary_url"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@id/layout_primary_url"
          android:layout_marginTop="8dp"
          android:hint="@string/alternate_url">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_secondary_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri" />

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/layout_username"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@id/layout_secondary_url"
          android:layout_marginTop="8dp"
          android:hint="@string/username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/layout_password"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@id/layout_username"
          android:layout_marginTop="8dp"
          android:hint="@string/password"
          app:endIconMode="none">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

      </com.google.android.material.textfield.TextInputLayout>
    </RelativeLayout>
  </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
